unpackaged/main/default/objects/Shipping_Address__c/Shipping_Address__c.object-meta.xml
<CustomObject>
    <label>Shipping Address</label>
    <nameField>
        <label>Shipping Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Addresss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>