unpackaged/main/default/objects/Shipping_Address__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <label>Address 1</label>
    <length>240</length>
    <required>true</required>
    <type>Text</type>
</CustomField>