unpackaged/main/default/objects/Shipping_Address__c/fields/Oracle_AR_Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Oracle_AR_Customer_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oracle AR Customer Address</label>
    <referenceTo>Oracle_AR_Customer_Address__c</referenceTo>
    <relationshipLabel>Shipping Addresss</relationshipLabel>
    <relationshipName>Shipping_Addresss</relationshipName>
    <type>Lookup</type>
</CustomField>